# cpp_back_to_back

./: CPP_STORY.md  README.md
project1/: CMakeLists.txt  README.md
project1/include/: Student.h  StudentManager.h
project1/src/: Student.cpp  StudentManager.cpp  main.cpp
project10/: CMakeLists.txt  README.md
project10/include/: Category.h  Inventory.h  Product.h  ProductManager.h
project10/src/: Category.cpp  Inventory.cpp  Product.cpp  ProductManager.cpp  main.cpp
project11/: CMakeLists.txt  README.md
project11/include/: Course.h  CourseManager.h  Grade.h  Instructor.h  Student.h
project11/src/: Course.cpp  CourseManager.cpp  Grade.cpp  Instructor.cpp  Student.cpp  main.cpp
project2/: CMakeLists.txt  README.md
project2/include/: Account.h  Bank.h  CheckingAccount.h  SavingsAccount.h  Transaction.h
project2/src/: Account.cpp  Bank.cpp  CheckingAccount.cpp  SavingsAccount.cpp  Transaction.cpp  main.cpp
project3/: CMakeLists.txt  README.md
project3/include/: Book.h  LibraryManager.h  Member.h
project3/src/: Book.cpp  LibraryManager.cpp  Member.cpp  main.cpp
project4/: CMakeLists.txt  README.md
project4/include/: AnalyticsEngine.h  FileHandler.h  Task.h  TaskManager.h
project4/src/: AnalyticsEngine.cpp  FileHandler.cpp  Task.cpp  TaskManager.cpp  main.cpp
project6/: CMakeLists.txt  README.md
project6/include/: AnalyticsEngine.h  Booking.h  FileHandler.h  Movie.h  Screen.h  Seat.h  Showtime.h  Theater.h  Ticket.h
project6/src/: AnalyticsEngine.cpp  Booking.cpp  FileHandler.cpp  Movie.cpp  Screen.cpp  Seat.cpp  Showtime.cpp  Theater.cpp  Ticket.cpp  main.cpp
project7/: CMakeLists.txt  README.md
project7/include/: Customer.h  Inventory.h  KitchenTicket.h  Menu.h  MenuItem.h  Order.h  OrderItem.h  Payment.h  Restaurant.h  RestaurantAnalytics.h  Table.h
project7/src/: Customer.cpp  Inventory.cpp  KitchenTicket.cpp  Menu.cpp  MenuItem.cpp  Order.cpp  OrderItem.cpp  Payment.cpp  Restaurant.cpp  RestaurantAnalytics.cpp  Table.cpp  main.cpp
project8/: CMakeLists.txt
project8/include/: ParkingLevel.h  ParkingLot.h  ParkingSpot.h  Ticket.h  Vehicle.h
project8/src/: ParkingLevel.cpp  ParkingLot.cpp  ParkingSpot.cpp  Ticket.cpp  Vehicle.cpp  main.cpp
project9/: CMakeLists.txt  README.md
project9/include/: Booking.h  FileHandler.h  Guest.h  Hotel.h  Payment.h  Review.h  Room.h
project9/src/: Booking.cpp  FileHandler.cpp  Guest.cpp  Hotel.cpp  Payment.cpp  Review.cpp  Room.cpp  main.cpp
